[package]
name = "prf-chunker"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes_crypto = "1.3.0"
anyhow = "1.0.93"
bytemuck = { version = "1.19.0", features = ["aarch64_simd"] }
clap = { version = "4.5.40", features = ["derive"] }
hkdf = "0.12.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
risc0-core = "1.1.3"
sha2 = { version = "0.10.8", features = ["sha2-asm"] }
